--- a/SmartShop/SmartShop-UI/package.json
+++ b/SmartShop/SmartShop-UI/package.json
@@ -4,16 +4,24 @@
   "main": "main.js",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "electron": "^23.1.1",
+    "fs-extra": "^11.1.0",
+    "lodash": "^4.17.21",
+    "natsort": "^2.0.3",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "sqlite3": "^5.1.4",
+    "unidecode": "^0.1.8",
     "unorm": "^1.6.0",
+    "use-debounce": "^9.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
