--- a/SmartShop/.vscode/settings.json
+++ b/SmartShop/.vscode/settings.json
@@ -1,32 +1,24 @@
 {
 	"editor.tabSize": 4,
 	"editor.indentSize": 4,
+    "prettier.tabWidth": 4,
+	"prettier.useTabs": true,
+    "prettier.printWidth": 160,
 	"editor.useTabStops": true,
 	"editor.formatOnSave": true,
 	"editor.formatOnType": true,
 	"editor.insertSpaces": false,
 	"editor.formatOnPaste": true,
-	"editor.detectIndentation": true,
-	"[python]": {
-		"editor.tabSize": 4,
-		"editor.indentSize": 4,
-		"editor.useTabStops": true,
-		"editor.formatOnSave": true,
-		"editor.formatOnType": true,
-		"editor.insertSpaces": false,
-		"editor.formatOnPaste": true,
-		"editor.detectIndentation": true,
-	},
-	"[css]": {
-		"editor.tabSize": 4,
-		"editor.indentSize": 4,
-		"editor.useTabStops": true,
-		"editor.formatOnSave": true,
-		"editor.formatOnType": true,
-		"editor.insertSpaces": false,
-		"editor.formatOnPaste": true,
-		"editor.detectIndentation": true,
-	},
 	"files.trimFinalNewlines": true,
+	"editor.defaultFormatter": null,
+	"editor.detectIndentation": true,
+    "prettier.trailingComma": "none",
 	"files.trimTrailingWhitespace": true,
+	"python.formatting.provider": "black",
+	"editor.codeActionsOnSave": {
+        "source.fixAll": true
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
