--- a/SmartShop/.vscode/settings.json
+++ b/SmartShop/.vscode/settings.json
@@ -8,12 +8,13 @@
 	"editor.formatOnSave": true,
 	"editor.formatOnType": true,
 	"editor.insertSpaces": false,
+	"editor.formatOnPaste": false,
 	"files.trimFinalNewlines": true,
 	"editor.defaultFormatter": null,
 	"editor.detectIndentation": true,
     "prettier.trailingComma": "none",
 	"files.trimTrailingWhitespace": true,
-	"python.formatting.provider": "black",
+	"python.formatting.provider": "autopep8",
 	"editor.codeActionsOnSave": {
         "source.fixAll": true
 	},
