--- a/SmartShop/.vscode/settings.json
+++ b/SmartShop/.vscode/settings.json
@@ -24,4 +24,7 @@
 	"[javascript]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
+	"[jsonc]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
 }
